--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@enykeev/react-virtualized": "^9.22.4-mirror.1",
+    "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.8.4",
+    "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.3",
+    "local-storage": "^2.0.0",
     "nth-check": "^2.1.1",
     "react": "^18.1.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
+    "react-geocode": "^0.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-timer-hook": "^3.0.5",
+    "recoil": "^0.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
