--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.9.3",
     "local-storage": "^2.0.0",
     "nth-check": "^2.1.1",
