--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-geocode": "^0.2.3",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-timer-hook": "^3.0.5",
